dataset1235/2025-2/610742602/users/1126757059/executions/906907063_2149359571.log
== SUBMISSION (2025-08-19 21:22:17)
-- CODE: 
print(90 - 55)
      
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:21:18)
-- CODE: 
print(diferença= 90-55)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(diferença= 90-55)
TypeError: 'diferença' is an invalid keyword argument for print()
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(diferença= 90-55)
TypeError: 'diferença' is an invalid keyword argument for print()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:10)
-- CODE: 
print(90 - 55)
      
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:22:08)
-- CODE: 
print(90 - 55)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:21:10)
-- CODE: 
print(diferença= 90-55"
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    print(diferença= 90-55"
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    print(diferença= 90-55"
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:19:50)
-- CODE: 
A= 90
N= 55
AN= 90-55
Print("a diferença que Fredegunda deve pagar é",AN)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é",AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é",AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:21:17)
-- CODE: 
print(diferença= 90-55)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(diferença= 90-55)
TypeError: 'diferença' is an invalid keyword argument for print()
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(diferença= 90-55)
TypeError: 'diferença' is an invalid keyword argument for print()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:22:14)
-- CODE: 
print(90 - 55)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:19:48)
-- CODE: 
A= 90
N= 55
AN= 90-55
Print("a diferença que Fredegunda deve pagar é",AN)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é",AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é",AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:19:39)
-- CODE: 
A= 90
N= 55
AN= 90-55
Print("a diferença que Fredegunda deve pagar é", AN)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é", AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é", AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:19:22)
-- CODE: 
A= 90
N= 55
AN= 90 - 55
Print("a diferença que Fredegunda deve pagar é", AN)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é", AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Print("a diferença que Fredegunda deve pagar é", AN)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:21:57)
-- CODE: 
print(diferença= 90 - 55)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(diferença= 90 - 55)
TypeError: 'diferença' is an invalid keyword argument for print()
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(diferença= 90 - 55)
TypeError: 'diferença' is an invalid keyword argument for print()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
